--- a/PyCitySchool/main.ipynb
+++ b/PyCitySchool/main.ipynb
@@ -29,13 +29,13 @@
    "outputs": [],
    "source": [
     "# Attempt to read the CSV files\n",
-    "schools_df = pd.read_csv(schools_complete_csv)\n",
-    "students_df = pd.read_csv(students_complete_csv)"
+    "school_data_df = pd.read_csv(schools_complete_csv)\n",
+    "student_data_df = pd.read_csv(students_complete_csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "4          4    Griffin High School   Charter  1468   917500"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
    "source": [
     "# Display some information to verify successful reading\n",
     "\n",
-    "schools_df.head()\n",
+    "school_data_df.head()\n",
     "    \n",
     "\n",
     "    "
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -240,13 +240,436 @@
        "4             97          84  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "students_df.head()"
+    "student_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Dr. Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student ID       student_name gender grade        school_name  \\\n",
+       "0           0       Paul Bradley      M   9th  Huang High School   \n",
+       "1           1       Victor Smith      M  12th  Huang High School   \n",
+       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
+       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
+       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
+       "\n",
+       "   reading_score  math_score  School ID      type  size   budget  \n",
+       "0             66          79          0  District  2917  1910635  \n",
+       "1             94          61          0  District  2917  1910635  \n",
+       "2             90          60          0  District  2917  1910635  \n",
+       "3             67          58          0  District  2917  1910635  \n",
+       "4             97          84          0  District  2917  1910635  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Merge the two data frames\n",
+    "pycitysch_data = pd.merge (student_data_df, school_data_df, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
+    "pycitysch_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total number of unique schools\n",
+    "school_count = pycitysch_data[\"school_name\"].nunique()\n",
+    "school_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate the total number of students\n",
+    "student_count = pycitysch_data[\"student_name\"].count()\n",
+    "student_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pycitysch_data_unique = pycitysch_data.drop_duplicates(subset=['school_name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24649428"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the total budget\n",
+    "total_budget = pycitysch_data_unique [\"budget\"].sum()\n",
+    "total_budget\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.98537145774827"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_math_score = pycitysch_data[\"math_score\"].mean()\n",
+    "average_math_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.87784018381414"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the average (mean) reading score\n",
+    "average_reading_score = pycitysch_data[\"reading_score\"].mean()\n",
+    "average_reading_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.9808526933878"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use the following to calculate the percentage of students who passed math (math scores greather than or equal to 70)\n",
+    "passing_math_count = pycitysch_data[(student_data_df[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_math_percentage = passing_math_count / float(student_count) * 100\n",
+    "passing_math_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.80546336482001"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of students who passed reading (hint: look at how the math percentage was calculated)\n",
+    "passing_reading_count =  pycitysch_data[(student_data_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_reading_percentage = passing_reading_count / float(student_count) * 100\n",
+    "passing_reading_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.17232575950983"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use the following to calculate the percentage of students that passed math and reading\n",
+    "passing_math_reading_count = pycitysch_data[\n",
+    "    (pycitysch_data[\"math_score\"] >= 70) & (pycitysch_data[\"reading_score\"] >= 70)\n",
+    "].count()[\"student_name\"]\n",
+    "overall_passing_rate = passing_math_reading_count /  float(student_count) * 100\n",
+    "overall_passing_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
+       "      <td>65.172326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Total Schools Total Students    Total Budget Average Math Score  \\\n",
+       "0            15         39,170  $24,649,428.00          78.985371   \n",
+       "\n",
+       "  Average Reading Score % Passing Math % Passing Reading Overall Passing  \n",
+       "0              81.87784      74.980853         85.805463       65.172326  "
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a high-level snapshot of the district's key metrics in a DataFrame\n",
+    "\n",
+    "total_schools = school_count\n",
+    "total_students = student_count\n",
+    "total_budget = total_budget\n",
+    "\n",
+    "\n",
+    "district_summary = pd.DataFrame ({\"Total Schools\": [total_schools],\"Total Students\": [total_students],\"Total Budget\": [total_budget],\"Average Math Score\":[average_math_score], \"Average Reading Score\"\n",
+    "                                  : [average_reading_score],\"% Passing Math\":[passing_math_percentage], \"% Passing Reading\":[passing_reading_percentage],\"Overall Passing\":[overall_passing_rate]})\n",
+    "\n",
+    "# Formatting\n",
+    "district_summary[\"Total Schools\"] = district_summary[\"Total Schools\"].map(\"{:,}\".format)\n",
+    "district_summary[\"Total Students\"] = district_summary[\"Total Students\"].map(\"{:,}\".format)\n",
+    "district_summary[\"Total Budget\"] = district_summary[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "district_summary[\"Average Math Score\"] = district_summary[\"Average Math Score\"].map(\"{0:,.6f}\".format)\n",
+    "district_summary[\"Average Reading Score\"] = district_summary[\"Average Reading Score\"].map(\"{0:,.5f}\".format)\n",
+    "district_summary[\"% Passing Math\"] = district_summary[\"% Passing Math\"].map(\"{0:,.6f}\".format)\n",
+    "district_summary[\"% Passing Reading\"] = district_summary[\"% Passing Reading\"].map(\"{0:,.6f}\".format)\n",
+    "district_summary[\"Overall Passing\"] = district_summary[\"Overall Passing\"].map(\"{0:,.6f}\".format)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "district_summary"
    ]
   },
   {
@@ -254,9 +677,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Merge the two data frames"
-   ]
+   "source": []
   }
  ],
  "metadata": {
