--- a/PyCitySchool/main.ipynb
+++ b/PyCitySchool/main.ipynb
@@ -176,10 +176,6 @@
    "source": [
     "# Create a high-level snapshot of the district's key metrics in a DataFrame\n",
     "\n",
-    "total_schools = school_count\n",
-    "total_students = student_count\n",
-    "total_budget = total_budget\n",
-    "\n",
     "\n",
     "district_summary = pd.DataFrame ({\"Total Schools\": [total_schools],\"Total Students\": [total_students],\"Total Budget\": [total_budget],\"Average Math Score\":[average_math_score], \"Average Reading Score\"\n",
     "                                  : [average_reading_score],\"% Passing Math\":[passing_math_percentage], \"% Passing Reading\":[passing_reading_percentage],\"Overall Passing\":[overall_passing_rate]})\n",
@@ -248,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,36 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "school_name\n",
-       "Bailey High School       2719\n",
-       "Cabrera High School      1697\n",
-       "Figueroa High School     1569\n",
-       "Ford High School         1487\n",
-       "Griffin High School      1330\n",
-       "Hernandez High School    2481\n",
-       "Holden High School        381\n",
-       "Huang High School        1561\n",
-       "Johnson High School      2549\n",
-       "Pena High School          871\n",
-       "Rodriguez High School    2119\n",
-       "Shelton High School      1583\n",
-       "Thomas High School       1487\n",
-       "Wilson High School       2068\n",
-       "Wright High School       1626\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the provided code to calculate the number of students per school that passed both math and reading with scores of 70 or higher\n",
     "students_passing_math_and_reading = pycitysch_data[\n",
@@ -334,10 +303,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the provided code to calculate the passing rates\n",
-    "per_school_passing_math = school_students_passing_math / per_school_counts * 100\n",
-    "per_school_passing_reading = school_students_passing_reading / per_school_counts * 100\n",
-    "overall_passing_rate = school_students_passing_math_and_reading / per_school_counts * 100\n"
+    "# Merge with per_school_counts to get the total student count per school\n",
+    "per_school_passing_math = pd.merge(school_students_passing_math, per_school_counts, on='school_name', how='left')\n",
+    "per_school_passing_math['% Passing Math'] = (per_school_passing['passing_math_count'] / per_school_passing['size']) * 100\n",
+    "\n",
+    "per_school_passing_reading= pd.merge(per_school_passing, school_students_passing_reading, on='school_name', how='left')\n",
+    "per_school_passing_reading['% Passing Reading'] = (per_school_passing['passing_reading_count'] / per_school_passing['size']) * 100\n",
+    "\n",
+    "\n",
+    "overall_passing_rate = pd.merge(per_school_passing, school_students_passing_both, on='school_name', how='left')\n",
+    "overall_passing_rate['% Overall Passing'] = (per_school_passing['passing_both_count'] / per_school_passing['size']) * 100\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot specify ',' with 's'.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[406], line 17\u001b[0m\n\u001b[0;32m      1\u001b[0m per_school_summary \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSchool Name\u001b[39m\u001b[38;5;124m'\u001b[39m: per_school_counts[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mschool_name\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSchool Type\u001b[39m\u001b[38;5;124m'\u001b[39m: per_school_counts[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m Overall Passing\u001b[39m\u001b[38;5;124m'\u001b[39m: overall_passing_rate[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m Overall Passing\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     12\u001b[0m })\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Apply formatting to numeric columns\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m per_school_summary[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSchool Type\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m per_school_summary[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSchool Type\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{:,}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat)\n\u001b[0;32m     18\u001b[0m per_school_summary[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal Students\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m per_school_summary[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal Students\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{:,}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat)\n\u001b[0;32m     19\u001b[0m per_school_summary[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal School Budget\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m per_school_summary[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal School Budget\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$\u001b[39m\u001b[38;5;132;01m{:,.2f}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat)\n",
+      "File \u001b[1;32mc:\\Users\\Sweet\\Anaconda3\\envs\\dev\\Lib\\site-packages\\pandas\\core\\series.py:4700\u001b[0m, in \u001b[0;36mSeries.map\u001b[1;34m(self, arg, na_action)\u001b[0m\n\u001b[0;32m   4620\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmap\u001b[39m(\n\u001b[0;32m   4621\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m   4622\u001b[0m     arg: Callable \u001b[38;5;241m|\u001b[39m Mapping \u001b[38;5;241m|\u001b[39m Series,\n\u001b[0;32m   4623\u001b[0m     na_action: Literal[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   4624\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Series:\n\u001b[0;32m   4625\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   4626\u001b[0m \u001b[38;5;124;03m    Map values of Series according to an input mapping or function.\u001b[39;00m\n\u001b[0;32m   4627\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4698\u001b[0m \u001b[38;5;124;03m    dtype: object\u001b[39;00m\n\u001b[0;32m   4699\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 4700\u001b[0m     new_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_map_values(arg, na_action\u001b[38;5;241m=\u001b[39mna_action)\n\u001b[0;32m   4701\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_constructor(new_values, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\u001b[38;5;241m.\u001b[39m__finalize__(\n\u001b[0;32m   4702\u001b[0m         \u001b[38;5;28mself\u001b[39m, method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmap\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   4703\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\Sweet\\Anaconda3\\envs\\dev\\Lib\\site-packages\\pandas\\core\\base.py:921\u001b[0m, in \u001b[0;36mIndexOpsMixin._map_values\u001b[1;34m(self, mapper, na_action, convert)\u001b[0m\n\u001b[0;32m    918\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(arr, ExtensionArray):\n\u001b[0;32m    919\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m arr\u001b[38;5;241m.\u001b[39mmap(mapper, na_action\u001b[38;5;241m=\u001b[39mna_action)\n\u001b[1;32m--> 921\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m algorithms\u001b[38;5;241m.\u001b[39mmap_array(arr, mapper, na_action\u001b[38;5;241m=\u001b[39mna_action, convert\u001b[38;5;241m=\u001b[39mconvert)\n",
+      "File \u001b[1;32mc:\\Users\\Sweet\\Anaconda3\\envs\\dev\\Lib\\site-packages\\pandas\\core\\algorithms.py:1743\u001b[0m, in \u001b[0;36mmap_array\u001b[1;34m(arr, mapper, na_action, convert)\u001b[0m\n\u001b[0;32m   1741\u001b[0m values \u001b[38;5;241m=\u001b[39m arr\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mobject\u001b[39m, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m   1742\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m na_action \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1743\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m lib\u001b[38;5;241m.\u001b[39mmap_infer(values, mapper, convert\u001b[38;5;241m=\u001b[39mconvert)\n\u001b[0;32m   1744\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1745\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m lib\u001b[38;5;241m.\u001b[39mmap_infer_mask(\n\u001b[0;32m   1746\u001b[0m         values, mapper, mask\u001b[38;5;241m=\u001b[39misna(values)\u001b[38;5;241m.\u001b[39mview(np\u001b[38;5;241m.\u001b[39muint8), convert\u001b[38;5;241m=\u001b[39mconvert\n\u001b[0;32m   1747\u001b[0m     )\n",
+      "File \u001b[1;32mlib.pyx:2972\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Cannot specify ',' with 's'."
+     ]
+    }
+   ],
+   "source": [
+    "# per_school_counts = school_data_df.groupby(\"school_name\")[\"size\"].sum().reset_index()\n",
+    "\n",
+    "\n",
+    "# per_school_summary = pd.DataFrame({\n",
+    "#     'School Name': per_school_counts['school_name'],\n",
+    "#     'School Type': per_school_counts['type'],\n",
+    "#     'Total Students': per_school_counts['size'],\n",
+    "#     'Total School Budget': per_school_budget['budget'],\n",
+    "#     'Per Student Budget': per_school_capita['budget_per_student'],\n",
+    "#     'Average Math Score': per_school_math['math_score'],\n",
+    "#     'Average Reading Score': per_school_reading['reading_score'],\n",
+    "#     '% Passing Math': per_school_passing_math['% Passing Math'],\n",
+    "#     '% Passing Reading': per_school_passing_reading['% Passing Reading'],\n",
+    "#     '% Overall Passing': overall_passing_rate['% Overall Passing']\n",
+    "# })\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # Apply formatting to numeric columns\n",
+    "# per_school_summary['School Type'] = per_school_summary['School Type'].map(\"{:,}\".format)\n",
+    "# per_school_summary['Total Students'] = per_school_summary['Total Students'].map(\"{:,}\".format)\n",
+    "# per_school_summary['Total School Budget'] = per_school_summary['Total School Budget'].map(\"${:,.2f}\".format)\n",
+    "# per_school_summary['Per Student Budget'] = per_school_summary['Per Student Budget'].map(\"${:,.2f}\".format)\n",
+    "# per_school_summary['Average Math Score'] = per_school_summary['Average Math Score'].map(\"{:.2f}\".format)\n",
+    "# per_school_summary['Average Reading Score'] = per_school_summary['Average Reading Score'].map(\"{:.2f}\".format)\n",
+    "# per_school_summary['% Passing Math'] = per_school_summary['% Passing Math'].map(\"{:.2f}%\".format)\n",
+    "# per_school_summary['% Passing Reading'] = per_school_summary['% Passing Reading'].map(\"{:.2f}%\".format)\n",
+    "# per_school_summary['% Overall Passing'] = per_school_summary['% Overall Passing'].map(\"{:.2f}%\".format)\n",
+    "\n",
+    "# per_school_summary.set_index(\"School Name\", inplace=True)\n",
+    "\n",
+    "\n",
+    "# # Display the formatted per_school_summary\n",
+    "# print(per_school_summary)\n"
    ]
   },
   {
@@ -346,15 +380,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a DataFrame called `per_school_summary` with columns for the calculations above.\n",
-    "per_school_summary =\n",
-    "\n",
-    "# Formatting\n",
-    "per_school_summary[\"Total School Budget\"] = per_school_summary[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
-    "per_school_summary[\"Per Student Budget\"] = per_school_summary[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
-    "\n",
-    "# Display the DataFrame\n",
-    "per_school_summary\n"
+    "top_schools =\n",
+    "top_schools.head(5)"
    ]
   }
  ],
